--- a/index.html
+++ b/index.html
@@ -1,7 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Three JS</title></head>
+  <head>
+  	<title>Three JS</title>
+  	<script src="three.min.js"></script>
+  </head>
   <body>
-    <script src="three.min.js"></script>
+    <script>
+		var scene = new THREE.Scene();
+		var width = window.innerWidth;
+		var height = window.innerHeight;
+		var camera = new THREE.PerspectiveCamera(70, width / height, 1, 1000);
+		camera.position.z = 5;
+
+		var renderer = new THREE.WebGLRenderer( { antialias: true, alpha: true } );
+		renderer.setSize(width, height);
+		renderer.setClearColor(0x000000);
+		document.body.appendChild(renderer.domElement);
+
+    	var cube = new THREE.BoxGeometry(10, 10, 10);
+    	for (var i = 0; i < 300; i++) {
+    		var r = 255 * Math.random();
+    		var g = 255 * Math.random();
+    		var b = 255 * Math.random();
+    		var col = (r << 16) | (g << 8) | b;
+			var material = new THREE.MeshPhongMaterial( { color: col, specular: 0xffffff, shininess: 20 } );
+			var mesh = new THREE.Mesh(cube, material);
+
+			mesh.position.x = 800 * ( 2.0 * Math.random() - 1.0 );
+			mesh.position.y = 800 * ( 2.0 * Math.random() - 1.0 );
+			mesh.position.z = 800 * ( 2.0 * Math.random() - 1.0 );
+
+			mesh.rotation.x = Math.random() * Math.PI;
+			mesh.rotation.y = Math.random() * Math.PI;
+			mesh.rotation.z = Math.random() * Math.PI;
+
+			mesh.matrixAutoUpdate = false;
+			mesh.updateMatrix();
+
+			scene.add(mesh);
+		}
+
+    	var ambient = new THREE.AmbientLight( 0x888888 );
+		scene.add( ambient );
+
+		var directionalLight = new THREE.DirectionalLight( 0xffffff );
+		directionalLight.position.set(10, 10, 1);
+
+		scene.add( directionalLight );
+
+    	function render() {
+    		requestAnimationFrame(render);
+
+    		//boxObject.rotation.y += 0.1;
+    		//boxObject.rotation.x += 0.01;
+    		renderer.render(scene, camera);
+    	}
+
+    	render();
+    </script>
   </body>
 </html>
